@@ -45,6 +45,7 @@ define('MAG_PAGENAMEE', 31);
 define('MAG_NAMESPACE', 32);
 define('MAG_TOC', 33);
 define('MAG_GRAMMAR', 34);
+define('MAG_NOTITLECONVERT', 35);
 
 $wgVariableIDs = array(
 	MAG_CURRENTMONTH,
