@@ -207,7 +207,8 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_LOCALURL             => array( 0,    'LOCALURL:'              ),
 	MAG_LOCALURLE            => array( 0,    'LOCALURLE:'             ),
 	MAG_SERVER               => array( 0,    'SERVER'                 ),
-	MAG_GRAMMAR              => array( 0,    'GRAMMAR:'               )
+	MAG_GRAMMAR              => array( 0,    'GRAMMAR:'               ),
+	MAG_NOTITLECONVERT       => array( 0,    '__NOTITLECONVERT__', '__NOTC__'),
 );
 
 #-------------------------------------------------------------------
