@@ -180,7 +180,8 @@ If upgrading from an older release, see the file UPGRADING.
   bigger than the original image
 * (bug 1213) i18n of Special:Log labels
 * (bug 1013) Fix jbo, minnan in language names list
-
+* Added magic word MAG_NOTITLECONVERT to indicate that the title of the page
+  do not need to be converted. Useful in zh:
 
 === Caveats ===
 
